--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
 driver=com.mysql.cj.jdbc.Driver
-url=jdbc:mysql://10.70.204.84:30006/changfan?userSSL=true&useUnicode=true&characterEncoding=utf-8
+url=jdbc:mysql://xxx.xxx.xxx.xxx:3306/changfan?userSSL=true&useUnicode=true&characterEncoding=utf-8
 username=xxxx
 password=xxxx
